# SyntheticResearchForum

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
.newsletters/: weekly_field_notes_issue_1.md  weekly_field_notes_issue_2.md  weekly_field_notes_issue_3.md  weekly_field_notes_issue_4.md  weekly_field_notes_issue_5.md
Requirements/: EPIC_TEMPLATE.md  PL_ChangeRequest_1.md  openclaw_native_vision.md  progress.md  progress_summary.md  progress_tracker.md  srf_epic_01_1_runtime_infrastructure.md  srf_epic_01_foundation.md  srf_epic_02_agent_memory.md  srf_epic_03_newsletter_parsing.md  srf_epic_04_workspace_paper_extraction.md  srf_epic_05_agent_preparation.md  srf_epic_06_debate_engine.md  srf_epic_06b_openclaw_native_debate.md  srf_epic_11_promptledger_proxy.md  srf_runtime_topology.md  srf_v_2_full_technical_specification.md
Requirements/PromptLedger/: INTEGRATION_GUIDE.md  README.md
Requirements/Railway/: RAILWAY_SETUP_GUIDE.md  openclaw.json
Requirements/bugs/: BUG-001-newsletter-parser-format-mismatch.md  BUG-003-clustering-prompt-double-brace.md  BUG-004-workflow-lobster-input-and-paths.md  BUG-008-tracker-execute-missing-model-field.md  (+1 more)
config/: exec-approvals.json  openclaw.json
scripts/: parse_newsletter.py  prepare_debate_context.py  run_debate_bridge.py  run_paper_extraction.py  run_preparation.py  run_workspace_setup.py  srf_init.py  update_srf.sh  validate_and_stage_forum.py  validate_prompts.py  validate_transcript.py
workflows/: srf_forum.lobster  srf_forum.yaml
(+86 files in other folders)
