[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srf"
version = "0.1.0"
description = "Synthetic Research Forum — deterministic multi-agent epistemic discussion system"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "anyio>=4.3.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
promptledger = [
    "promptledger-client>=0.1.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-recording>=0.13.0",
    "ruff>=0.4.0",
    "anyio[trio]>=4.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
srf = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — ruff format handles this
]

[tool.ruff.lint.isort]
known-first-party = ["srf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
